data/all_generated_tests/raw_wast_tests/nop_EdgeCaseFailuresinbr_table_788.wast
;; 9. **Test Description**: Include a `br_table` that targets multiple nested blocks. Precede block definitions and nested block invocations with `nop` instructions.     - **Constraint Checked**: Confirm `nop` placements within and around blocks don't alter index-based branching execution.     - **Edge Case Relation**: Nested control structures should manage indices appropriately, with `nop` being inert.

(assert_invalid
  (module
    (func $test (block
      (block (nop) (nop) (br_table 0 1 (i32.const 0)))
      (block (nop) (nop) (br_table 0 1 (i32.const 1)))
    ))
  )
  "type mismatch"
)